# faker-cxx-benchmark

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  random_generator.h  random_number_engine_bm.cpp  string.h  uuid.h  uuid_bm.cpp
.github/workflows/: ci.yml  feature_ci.yml
benchmark/: main.cpp
